--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -747,28 +747,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'imblearn'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_6416\\1459104421.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Import the RandomOverSampler module form imbalanced-learn\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mimblearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mover_sampling\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mRandomOverSampler\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# Instantiate the random oversampler model\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m# # Assign a random_state parameter of 1 to the model\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'imblearn'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import the RandomOverSampler module form imbalanced-learn\n",
     "from imblearn.over_sampling import RandomOverSampler\n",
     "\n",
     "# Instantiate the random oversampler model\n",
     "# # Assign a random_state parameter of 1 to the model\n",
-    "random_over_sampling_model = RandomOverSampler(random_state= 78)\n",
+    "random_over_sampling_model = RandomOverSampler(random_state= 1)\n",
     "\n",
     "# Fit the original training data to the random_oversampler model\n",
     "X_resample, y_resample = random_over_sampling_model.fit_resample(X,y)"
@@ -776,9 +764,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    75036\n",
+       "1    75036\n",
+       "Name: loan_status, dtype: int64"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Count the distinct values of the resampled labels data\n",
     "y_resample.value_counts()"
@@ -793,19 +794,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Instantiate the Logistic Regression model\n",
     "# Assign a random_state parameter of 1 to the model\n",
-    "# YOUR CODE HERE!\n",
+    "lr_model_2= LogisticRegression(random_state=1)\n",
     "\n",
     "# Fit the model using the resampled training data\n",
-    "# YOUR CODE HERE!\n",
+    "train_model = lr_model_2.fit(X_resample,y_resample)\n",
     "\n",
     "# Make a prediction using the testing data\n",
-    "# YOUR CODE HERE!"
+    "testing_prediction2= lr_model_2.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Prediction</th>\n",
+       "      <th>Actual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>60914</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36843</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1966</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70137</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27237</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40013</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43107</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61988</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57437</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46757</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76181</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28403</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76799</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67934</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15849</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Prediction  Actual\n",
+       "60914           0       0\n",
+       "36843           0       0\n",
+       "1966            0       0\n",
+       "70137           0       0\n",
+       "27237           0       0\n",
+       "40013           0       0\n",
+       "43107           0       0\n",
+       "61988           0       0\n",
+       "57437           0       0\n",
+       "46757           0       0\n",
+       "76181           1       1\n",
+       "28403           0       0\n",
+       "76799           1       1\n",
+       "67934           0       0\n",
+       "15849           0       0"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "results = pd.DataFrame({\"Prediction\": testing_prediction2, \"Actual\": y_test})\n",
+    "results.head(15)\n",
+    "#print(results.nunique())"
    ]
   },
   {
@@ -823,32 +965,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9936781215845847"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Print the balanced_accuracy score of the model \n",
-    "# YOUR CODE HERE!"
+    "balanced_accuracy_score(y_test, testing_prediction2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[18649   116]\n",
+      " [    4   615]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Generate a confusion matrix for the model\n",
-    "# YOUR CODE HERE!"
+    "print(confusion_matrix(y_test, testing_prediction2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 precision    recall  f1-score   support\n",
+      "\n",
+      "  Healthy Loans       1.00      0.99      1.00     18765\n",
+      "High Risk Loans       0.84      0.99      0.91       619\n",
+      "\n",
+      "       accuracy                           0.99     19384\n",
+      "      macro avg       0.92      0.99      0.95     19384\n",
+      "   weighted avg       0.99      0.99      0.99     19384\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the classification report for the model\n",
-    "# YOUR CODE HERE!"
+    "print(classification_report(y_test, testing_prediction2, target_names=('Healthy Loans','High Risk Loans')))"
    ]
   },
   {
@@ -864,7 +1042,7 @@
    "source": [
     "**Question:** How well does the logistic regression model, fit with oversampled data, predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** YOUR ANSWER HERE!"
+    "**Answer:**  High Risk Loan(1) shows increase in recall values to 99% which was 91% with orginal data and f1-score to 91% which was 88 % with orginal data.   So, Logistic Regression model fits better using the oversampled data prediction."
    ]
   }
  ],
